--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@300;600&family=Tektur:wght@400;600&display=swap');
 * {
+    font-family: 'Exo 2', sans-serif;
+    font-family: 'Tektur', cursive;
     margin: 0;
     padding: 0;
 }
