--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ footer .footer-text {
 
     .leftsection {
         width: 52%;
-        font-size: 3rem;
+        font-size: 2.5rem;
         margin-left: 7rem;
         padding-top: 1rem;
     }
@@ -248,6 +248,7 @@ footer .footer-text {
 
     .rightsection {
         margin-left: 4rem;
+        animation: none;
     }
 
     .secondsection {
@@ -266,9 +267,8 @@ footer .footer-text {
     }
 
     .secondsection .vertical {
-        height: 164px;
+        height: 14rem;
     }
-
     .secondhead {
         text-align: center;
         margin-top: 1rem;
@@ -304,28 +304,32 @@ footer .footer-text {
     .button {
         margin-left: 1.5rem;
     }
-}
-
-@media (max-width: 850px) {
-    .leftsection {
-        width: 56%;
+    .rightsection img{
+        border-radius:0;
     }
 }
 
-@media (max-width:750px) {
+@media (max-width: 930px) {
     .leftsection {
-        width: 65%;
+        width: 57%;
+    }
+}
+
+@media (max-width:810px) {
+    .leftsection {
+        width: 66%;
         margin-left: 6rem;
     }
 }
 
-@media (max-width:667px) {
+@media (max-width:719px) {
     .leftsection {
         width: 80%;
+        font-size:1.8rem;
     }
 }
 
-@media (max-width: 640px) {
+@media (max-width: 623px) {
     main hr {
         width: 35rem;
         margin-left: 2rem;
