--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@300;600&family=Tektur:wght@400;600&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -70,9 +71,17 @@ nav ul li a:hover {
 }
 
 .leftsection {
-    width: 35%;
+    width: 63%;
     font-size: 3rem;
     padding-top: 2rem;
+}
+
+.firstbox {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    padding-left: 7rem;
 }
 
 .rightsection {
@@ -80,7 +89,8 @@ nav ul li a:hover {
     animation: floating 3s linear infinite;
 }
 
-.leftsection a {
+.leftsection a,
+.firstsection a {
     text-decoration: none;
     color: white;
 }
@@ -224,7 +234,6 @@ footer .footer-text {
 
     .firstsection {
         flex-direction: column-reverse;
-        margin: 1rem 5rem;
         align-items: center;
     }
 
@@ -236,12 +245,12 @@ footer .footer-text {
     .leftsection {
         width: 52%;
         font-size: 2.5rem;
-        margin-left: 7rem;
+        margin-left: 6rem;
         padding-top: 1rem;
     }
 
     .button {
-        margin-left: 2.3rem;
+        margin-left: 6rem;
     }
 
     .rightsection {
@@ -256,7 +265,8 @@ footer .footer-text {
     .secondsection .box {
         flex-direction: column;
         width: 20rem;
-        margin-left: 11.5rem;
+        margin: 2rem 13rem;
+        padding-left: 1rem;
     }
 
     .image-top {
@@ -267,6 +277,7 @@ footer .footer-text {
     .secondsection .vertical {
         height: 14rem;
     }
+
     .secondhead {
         text-align: center;
         margin-top: 1rem;
@@ -302,28 +313,23 @@ footer .footer-text {
     .button {
         margin-left: 1.5rem;
     }
-    .rightsection img{
-        border-radius:0;
+
+    .rightsection img {
+        border-radius: 0;
     }
 }
 
 @media (max-width: 930px) {
     .leftsection {
-        width: 57%;
+        width: 53%;
     }
 }
 
-@media (max-width:810px) {
-    .leftsection {
-        width: 66%;
-        margin-left: 6rem;
-    }
-}
 
-@media (max-width:719px) {
+@media (max-width:735px) {
     .leftsection {
-        width: 80%;
-        font-size:1.8rem;
+        width: 55%;
+        font-size: 1.7rem;
     }
 }
 
@@ -337,11 +343,25 @@ footer .footer-text {
         width: 40rem;
     }
 
+    .leftsection {
+        width: 68%;
+        margin-left: 0;
+    }
+
+    .secondsection .box {
+        margin: 2rem 4rem;
+    }
+
+    .button {
+        margin-left: 0;
+    }
+
     footer {
         width: 40rem;
     }
-    .footer .footer-third{
-        margin-left: 1rem; 
+
+    .footer .footer-third {
+        margin-left: 1rem;
     }
 }
 
@@ -351,9 +371,8 @@ footer .footer-text {
     }
 
     .leftsection {
-        width: 105%;
+        width: 90%;
         font-size: 1.rem;
-        margin-left: 10rem;
     }
 
     .button {
