--- a/style.css
+++ b/style.css
@@ -404,4 +404,8 @@ footer .footer-text {
         padding: 0;
         font-size: 0.8rem;
     }
+    .leftsection {
+        width: 90%;
+        font-size: 1.5rem;
+    }
 }
