--- a/style.css
+++ b/style.css
@@ -310,10 +310,6 @@ footer .footer-text {
         font-size: 2rem;
     }
 
-    .button {
-        margin-left: 1.5rem;
-    }
-
     .rightsection img {
         border-radius: 0;
     }
@@ -371,7 +367,7 @@ footer .footer-text {
     }
 
     .leftsection {
-        width: 90%;
+        width: 95%;
         font-size: 1.rem;
     }
 
@@ -404,8 +400,15 @@ footer .footer-text {
         padding: 0;
         font-size: 0.8rem;
     }
+
     .leftsection {
-        width: 90%;
-        font-size: 1.5rem;
+        width: 92%;
+        font-size: 1.4rem;
+    }
+}
+
+@media (max-width:362px) {
+    .leftsection {
+        width: 115%;
     }
 }
